# pydessem

./: LICENSE  README.md  gera_docs.sh  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pydessem.rst  readme.md
examples/: case_tiny.yaml
src/: tests.sh
src/pydessem/: __init__.py  cli.py  io_loader.py  model_core.py  reporting.py  solve.py
src/pydessem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: test_yaml.py
tests/: test_import.py
